--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -205,6 +205,12 @@
                     <DataTemplate DataType="{x:Type dialogVMs:NewFileViewModel}">
                         <dialogs:NewFileView ViewModel="{Binding}" />
                     </DataTemplate>
+                    <DataTemplate DataType="{x:Type dialogVMs:PluginViewModel}">
+                        <dialogs:PluginView ViewModel="{Binding}" />
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type dialogVMs:SoundModdingViewModel}">
+                        <dialogs:SoundModdingView ViewModel="{Binding}" />
+                    </DataTemplate>
                     <DataTemplate DataType="{x:Type dialogVMs:CreateClassDialogViewModel}">
                         <dialogs:CreateClassDialog ViewModel="{Binding}" />
                     </DataTemplate>
