--- a/WolvenKit/Views/Dialogs/SoundModdingView.xaml
+++ b/WolvenKit/Views/Dialogs/SoundModdingView.xaml
@@ -21,8 +21,6 @@
 
     <Grid Margin="20">
 
-       
-
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -30,90 +28,167 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Sound Modding Tool" FontSize="42" Grid.Row="0"/>
+        <!-- Header -->
+        <TextBlock Text="Sound Modding Tool" FontSize="24" Grid.Row="0"/>
+
+        <!-- Separator -->
         <Separator Grid.Row="1"/>
 
+        <!-- Main grid -->
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
+            <!-- Events grid -->
             <Grid Grid.Column="0" >
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <syncfusion:SfDataGrid x:Name="DataGridEvents" Margin="5"
-                                       ItemsSource="{Binding EventNames}"
+                <!-- Filters -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <Label Content="Filter events by tag: " VerticalAlignment="Center"/>
+                    <syncfusion:ComboBoxAdv Grid.Column="1" x:Name="ComboBoxTags" AllowMultiSelect="true"
+                                        IsEditable="true" EnableToken="true"
+                                        SelectionChanged="ComboBoxAdv_SelectionChanged"
+                                        ItemsSource="{Binding Tags, Mode=OneWay}" />
+                </Grid>
+
+                <!-- DataGrid -->
+                <syncfusion:SfDataGrid Grid.Row="1" x:Name="DataGridEvents" Margin="5"
                                        AllowFiltering="True"
                                        ColumnSizer="Star"
                                        SelectionMode="Extended"
                                        AllowResizingColumns="True"
-                                   
-                           AutoGenerateColumns="False" 
-                          >
+                                       AutoGenerateColumns="False" 
+                                       >
+                    
                     <syncfusion:SfDataGrid.Columns>
-                        <syncfusion:GridTextColumn  HeaderText="Name" MappingName="Name" IsReadOnly="true"/>
-                        <!--<syncfusion:GridTemplateColumn MappingName="Tags">
+                        <syncfusion:GridTemplateColumn MappingName="Name">
                             <syncfusion:GridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <syncfusion:ComboBoxAdv
-                                        ItemsSource="{Binding Tags}"
-                                        AllowMultiSelect="true"
-                                        IsEditable="false"
-                                        EnableToken="true">
-                                    </syncfusion:ComboBoxAdv>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="2,0,0,0"/>
+                                        <Button Grid.Column="1" Background="Transparent" BorderBrush="Transparent"
+                                                Click="ButtonAdd_Click" syncfusion:FocusManagerHelper.FocusedElement="True">
+                                            <iconPacks:PackIconMaterial Kind="Plus" Foreground="Green" Height="13" Width="17" Padding="1" />
+                                        </Button>
+                                    </Grid>
                                 </DataTemplate>
                             </syncfusion:GridTemplateColumn.CellTemplate>
-                        </syncfusion:GridTemplateColumn>-->
+                        </syncfusion:GridTemplateColumn>
                     </syncfusion:SfDataGrid.Columns>
+                    
                 </syncfusion:SfDataGrid>
 
-                <StackPanel Grid.Row="1">
-                    <Button Content="Add Events" Click="Button_Click"/>
+                <!-- Footer -->
+                <StackPanel Grid.Row="2">
+                    <Button Content="Add selected events" Click="ButtonAddAll_Click" Foreground="Green" Height="25" Margin="5,0,5,0"/>
                 </StackPanel>
             </Grid>
 
-            <syncfusion:SfGridSplitter Grid.Column="1" HorizontalAlignment="Stretch" 
-                                   ResizeBehavior="PreviousAndNext"
-                                   Width="auto"/>
+            <!-- Separator -->
+            <syncfusion:SfGridSplitter Grid.Column="1" HorizontalAlignment="Stretch"  ResizeBehavior="PreviousAndNext" Width="auto"/>
 
-            <ListView Grid.Column="2" x:Name="PluginList" HorizontalContentAlignment="Stretch" Margin="5"
-                 ItemsSource="{Binding Events}"
-                 SelectedItem="{Binding SelectedEvent}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
+            <!-- Modded grid -->
+            <Grid Grid.Column="2">
 
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="165"/>
+                </Grid.RowDefinitions>
 
-                            <StackPanel Grid.Column="0">
-                                <TextBlock Text="{Binding Name}" FontSize="14" Margin="2"/>
-                                <syncfusion:ComboBoxAdv x:Name="comboBoxFile" 
-                                                        ItemsSource="{Binding Files}"
-                                                        SelectedValue="{Binding File}"/>
-                                <syncfusion:ComboBoxAdv x:Name="comboBoxType" Height="30" Width="200" SelectedItem="{Binding Type}" ItemsSource="{Binding Types}"/>
+                <!-- Custom Events -->
+                <syncfusion:SfDataGrid Grid.Row="0" x:Name="PluginList" Margin="5"
+                                       AllowFiltering="True"
+                                       ColumnSizer="Star"
+                                       SelectionMode="Extended"
+                                       AllowResizingColumns="True"
+                                       AutoGenerateColumns="False"
+                                       ItemsSource="{Binding CustomEvents}"
+                                       SelectedItem="{Binding SelectedObject}"
+                                       >
 
-                            </StackPanel>
+                    <syncfusion:SfDataGrid.Columns>
+                        <syncfusion:GridTemplateColumn MappingName="Name">
+                            <syncfusion:GridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
 
-                            <StackPanel Grid.Column="1">
-                                <hc:NumericUpDown DecimalPlaces="2" Value="{Binding Pitch}"/>
-                                <hc:NumericUpDown DecimalPlaces="2" Value="{Binding Gain}"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-           
-            </ListView>
+                                        <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="2,0,0,0"/>
+                                        <Button Grid.Column="1" Background="Transparent" BorderBrush="Transparent"
+                                                Click="ButtonDel_Click" syncfusion:FocusManagerHelper.FocusedElement="True">
+                                            <iconPacks:PackIconMaterial Kind="Delete" Foreground="#DF2935" Height="12" />
+                                        </Button>
+                                    </Grid>
+                                </DataTemplate>
+                            </syncfusion:GridTemplateColumn.CellTemplate>
+                        </syncfusion:GridTemplateColumn>
+                    </syncfusion:SfDataGrid.Columns>
+
+                </syncfusion:SfDataGrid>
+
+                <!-- Separator -->
+                <syncfusion:SfGridSplitter Grid.Row="1" HorizontalAlignment="Stretch"  ResizeBehavior="PreviousAndNext" Width="auto"/>
+
+                <!-- PropertyGrid -->
+                <Grid Grid.Row="2" Margin="5">
+                    <Grid.Resources>
+                        <ResourceDictionary>
+                            <ResourceDictionary.MergedDictionaries>
+                                <hc:ThemeResources />
+                                <hc:Theme />
+                            </ResourceDictionary.MergedDictionaries>
+                        </ResourceDictionary>
+                    </Grid.Resources>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <hc:TextBox Grid.Row="0" Text="{Binding SelectedObject.Name}" IsReadOnly="True"
+                                hc:InfoElement.Title="Name: " hc:InfoElement.TitleWidth="60" hc:InfoElement.TitlePlacement="Left"
+                                hc:InfoElement.Necessary="True" />
+                    <hc:ComboBox Grid.Row="1" ItemsSource="{Binding Files, Mode=OneWay}" SelectedValue="{Binding SelectedObject.File}"
+                                 hc:InfoElement.Title="File: " hc:InfoElement.TitleWidth="60" hc:InfoElement.TitlePlacement="Left"
+                                 hc:InfoElement.Necessary="True"/>
+                    <hc:ComboBox Grid.Row="2" ItemsSource="{Binding Types, Mode=OneWay}" SelectedValue="{Binding SelectedObject.Type}"
+                                 hc:InfoElement.Title="Type: " hc:InfoElement.TitleWidth="60" hc:InfoElement.TitlePlacement="Left"
+                                 hc:InfoElement.Necessary="True"/>
+                    <hc:NumericUpDown Grid.Row="3" DecimalPlaces="2" Value="{Binding SelectedObject.Gain}" Style="{StaticResource NumericUpDownExtend}"
+                                      hc:InfoElement.Title="Gain: " hc:InfoElement.TitleWidth="60" hc:InfoElement.TitlePlacement="Left"/>
+                    <hc:NumericUpDown Grid.Row="4" DecimalPlaces="2" Value="{Binding SelectedObject.Pitch}" Style="{StaticResource NumericUpDownExtend}"
+                                      hc:InfoElement.Title="Pitch: " hc:InfoElement.TitleWidth="60" hc:InfoElement.TitlePlacement="Left"/>
+                </Grid>
+                
+            </Grid>
         </Grid>
-        
-        <Grid Grid.Row="3"  Height="28" >
+
+        <!-- Footer -->
+        <Grid Grid.Row="3"  Height="28" Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto" />
