fix distance/scaling with camera

--- a/WolvenKit/Views/Documents/RDTMeshView.xaml
+++ b/WolvenKit/Views/Documents/RDTMeshView.xaml
@@ -60,7 +60,7 @@
             Grid.Column="0"
             Attitude="{Binding ElementName=Camera1, Path=Attitude}"
             Bank="{Binding ElementName=Camera1, Path=Bank}"
-            Distance="50"
+            Distance="200"
             Heading="{Binding ElementName=Camera1, Path=Heading}"
             ShowCameraLight="Never"
             TargetPosition="0 0 0"
@@ -141,7 +141,8 @@
             Attitude="-20"
             Bank="0"
             CameraType="OrthographicCamera"
-            Distance="50"
+            CameraWidth="8"
+            Distance="200"
             Heading="230"
             ShowCameraLight="Never"
             TargetPosition="0 0 0"
