chunkmask working, fix transforms, display all materials

--- a/WolvenKit/Views/Documents/RDTMeshView.xaml
+++ b/WolvenKit/Views/Documents/RDTMeshView.xaml
@@ -296,6 +296,7 @@
             </StackPanel>
             <syncfusion:SfTreeGrid
                 Grid.Row="1"
+                AllowResizingColumns="True"
                 AutoExpandMode="AllNodesExpanded"
                 AutoGenerateColumns="False"
                 CheckBoxMappingName="IsEnabled"
