--- a/WolvenKit/Views/Dialogs/PluginsToolView.xaml
+++ b/WolvenKit/Views/Dialogs/PluginsToolView.xaml
@@ -1,6 +1,6 @@
 <reactiveUi:ReactiveUserControl
-    x:TypeArguments="dialogs:PluginViewModel"
-    x:Class="WolvenKit.Views.Dialogs.PluginView"
+    x:TypeArguments="dialogs:PluginsToolViewModel"
+    x:Class="WolvenKit.Views.Dialogs.PluginsToolView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -17,13 +17,13 @@
     Width="800"
     Height="600"
     Background="{StaticResource ContentBackgroundAlt3}"
-    d:DataContext="{d:DesignInstance Type=dialogs:PluginViewModel}"
-    Loaded="ReactiveUserControl_Loaded"
+    d:DataContext="{d:DesignInstance Type=dialogs:PluginsToolViewModel}"
     >
 
     <Grid Margin="20">
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -36,9 +36,27 @@
         <!-- Separator -->
         <Separator Grid.Row="1"/>
 
+        <!-- Buttons -->
+        <Grid Grid.Row="2">
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            
+            <Button Grid.Column="0" Command="{Binding SyncCommand}" Margin="0,10,0,0" >
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconMaterial Kind="Sync" Width="30" Height="30" Foreground="CadetBlue" />
+                    <TextBlock Text="Check for Updates" FontSize="16" VerticalAlignment="Center" Margin="5,0,10,0"/>
+                </StackPanel>
+            </Button>
+            
+        </Grid>
+
         <!-- Main grid -->
-        <ListBox Grid.Row="2" x:Name="PluginList" HorizontalContentAlignment="Stretch" Margin="25"
-                 ItemsSource="{Binding Plugins}" d:ItemsSource="{d:SampleData ItemCount=5}"
+        <ListBox Grid.Row="3" x:Name="PluginList" HorizontalContentAlignment="Stretch" Margin="25"
+                 ItemsSource="{Binding _pluginService.Plugins, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                 d:ItemsSource="{d:SampleData ItemCount=5}"
                  SelectedItem="{Binding SelectedPlugin}">
             
             <ListBox.ItemTemplate>
@@ -98,7 +116,7 @@
         </ListBox>
 
         <!-- Footer -->
-        <Grid Grid.Row="3"  Height="28" Margin="0,10,0,0">
+        <Grid Grid.Row="4"  Height="28" Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto" />
