--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -205,8 +205,8 @@
                     <DataTemplate DataType="{x:Type dialogVMs:NewFileViewModel}">
                         <dialogs:NewFileView ViewModel="{Binding}" />
                     </DataTemplate>
-                    <DataTemplate DataType="{x:Type dialogVMs:PluginViewModel}">
-                        <dialogs:PluginView ViewModel="{Binding}" />
+                    <DataTemplate DataType="{x:Type dialogVMs:PluginsToolViewModel}">
+                        <dialogs:PluginsToolView ViewModel="{Binding}" />
                     </DataTemplate>
                     <DataTemplate DataType="{x:Type dialogVMs:SoundModdingViewModel}">
                         <dialogs:SoundModdingView ViewModel="{Binding}" />
